Refactor devcontainer setup and update project metadata
- Replace the Dockerfile to streamline tool installation via install-tools.sh.
- Update postCreateCommand in devcontainer.json to use bash for script execution.
- Add install-tools.sh script for managing tool installations with logging and version checks.
- Modify CONTRIBUTING.md to correct issue link.
- Remove VERSION file and add install-summary.json for tool installation summary.
- Update package.json to reflect new project name and repository links.
- Create providers.tf file for future Terraform configurations.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,12 +1,7 @@
 FROM mcr.microsoft.com/devcontainers/base:ubuntu
 
-RUN apt-get update && apt-get install -y \
-    curl \
-    unzip \
-    git \
-    jq \
-    software-properties-common \
-    gnupg \
-    lsb-release \
-    ca-certificates \
-    && rm -rf /var/lib/apt/lists/*
+COPY install-tools.sh ./install-tools.sh
+RUN chmod +x install-tools.sh && ./install-tools.sh --tools=all
+
+# Clean up
+RUN rm install-tools.sh install-tools.log install-summary.json
