--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
   "build": {
     "dockerfile": "Dockerfile"
   },
-  "postCreateCommand": "./install-tools.sh --tools=all > /tmp/post-create.log 2>&1",
+  "postCreateCommand": "bash ./install-tools.sh --tools=all > /tmp/post-create.log 2>&1",
   "customizations": {
     "vscode": {
       "extensions": [
