--- a/.github/workflows/manage-gists.yaml
+++ b/.github/workflows/manage-gists.yaml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Get the list of Gists
         id: get-gists
-        if: "${{ github.event.inputs.operation == 'get-gists' }}"
+        if: ${{ github.event.inputs.operation == 'get-gists' }}
         shell: bash
         working-directory: ${{ github.workspace }}/gist-factory
         env:
@@ -51,7 +51,7 @@ jobs:
 
       - name: Run Gist Manager Script
         id: manage-gists
-        if: "${{ github.event.inputs.operation == 'manage-gists' }}"
+        if: ${{ github.event.inputs.operation == 'manage-gists' }}
         shell: bash
         working-directory: ${{ github.workspace }}/gist-factory      
         env:
