--- a/.github/workflows/manage-gists.yaml
+++ b/.github/workflows/manage-gists.yaml
@@ -79,14 +79,14 @@ jobs:
         git checkout -b feature/update-gists
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add all_gists.json
+        git add all-gists.json gist-id.json
         git commit -m "Update gists via GitHub Actions [skip ci]"
         git push --set-upstream origin feature/update-gists
         git push
 
     - name: Upload artifacts
       if: always()
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: gist-results
         path: |
