--- a/.github/workflows/manage-gists.yaml
+++ b/.github/workflows/manage-gists.yaml
@@ -58,7 +58,7 @@ jobs:
     - name: Execute maintain_gists.py
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      working-directory: gist-factory
+      working-directory: ${{ github.workspace }}/gist-factory
       run: |
         python maintain_gists.py \
           --input "${{ inputs.input_path }}" \
