fix: update default paths for input and output JSON files in manage-gists workflow

--- a/.github/workflows/manage-gists.yaml
+++ b/.github/workflows/manage-gists.yaml
@@ -10,12 +10,12 @@ on:
       input_path:
         description: 'Path to the input JSON file'
         required: true
-        default: 'gist-factory/all-gists.json'
+        default: 'all-gists.json'
         type: string
       output_path:
         description: 'Path to the output JSON file (optional)'
         required: false
-        default: 'gist-factory/all-gists.json'
+        default: 'all-gists.json'
         type: string
       skip_existing:
         description: 'Skip items that already contain a gist_id'
