fix: update filename and description for 1201-kubernetes-tf-15.json in all-gists.json and adjust wait duration in manage-gists workflow

--- a/.github/workflows/manage-gists.yaml
+++ b/.github/workflows/manage-gists.yaml
@@ -80,7 +80,7 @@ jobs:
     - name: Wait for Security Check workflow to complete
       shell: bash
       run: |
-        sleep(60)
+        sleep 60
 
     - name: Commit and push changes
       if: steps.git-check.outputs.changes == 'true' && !inputs.dry_run && success()
