--- a/.github/workflows/manage-gists.yaml
+++ b/.github/workflows/manage-gists.yaml
@@ -35,6 +35,7 @@ on:
 
 jobs:
   maintain-gists:
+    name: Maintain Gists
     runs-on: ubuntu-latest
     
     steps:
@@ -54,6 +55,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install requests
+
+    - name: Prepare temp branch name
+      id: temp-branch
+      run: echo "name=auto/gist-update-${{ github.run_id }}" >> "$GITHUB_OUTPUT"
 
     - name: Execute Python script (maintain_gists.py)
       env:
@@ -77,12 +82,7 @@ jobs:
           echo "changes=true" >> $GITHUB_OUTPUT
         fi
 
-    - name: Wait for Security Check workflow to complete
-      shell: bash
-      run: |
-        sleep 60
-
-    - name: Commit and push changes
+    - name: Commit only (no push yet)
       if: steps.git-check.outputs.changes == 'true' && !inputs.dry_run && success()
       working-directory: gist-factory
       run: |
@@ -91,10 +91,24 @@ jobs:
         git add -A .
         if ! git diff --cached --quiet; then
           git commit -m "Update gists via GitHub Actions [skip ci]"
-          git push
         else
-          echo "No changes to commit."
+          echo "No changes to commit."; exit 0
         fi
+
+    - name: Create & push temp branch (allowed by ruleset)
+      if: steps.git-check.outputs.changes == 'true' && !inputs.dry_run && success()
+      run: |
+        git switch -c "${{ steps.temp.outputs.name }}"
+        git push -u origin "${{ steps.temp.outputs.name }}"
+
+    - name: Open PR into the protected branch
+      uses: peter-evans/create-pull-request@v6
+      with:
+        title: "Update gists via GitHub Actions"
+        body: "Automated update from ${{ steps.temp.outputs.name }}."
+        branch: "${{ steps.temp.outputs.name }}"   # head (source) branch
+        base: "${{ github.ref_name }}"             # current bug/... branch
+        delete-branch: true
 
     - name: Upload artifacts
       if: always()
