fix: update filename and description for 1201-kubernetes-tf-17.json in all-gists.json and refine CodeQL analysis matrix

--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -26,7 +26,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'javascript', 'typescript', 'python']  # keep only what you use
+        language: [ 'javascript', 'python']  # keep only what you use
 
     steps:
       - uses: actions/checkout@v4
