fix: add debug print statements in manage_gists.py and manage-gists.yaml for better traceability

--- a/.github/workflows/manage-gists.yaml
+++ b/.github/workflows/manage-gists.yaml
@@ -78,6 +78,8 @@ jobs:
         shell: bash
         working-directory: ${{ github.workspace }}/gist-factory
         run: |
+          pwd
+          ls -lR 
           cat gist-operation-report.json|jq
 
       - name: Check for changes
