--- a/.github/workflows/manage-gists.yaml
+++ b/.github/workflows/manage-gists.yaml
@@ -58,10 +58,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install requests
 
-      # - name: Prepare temp branch name
-      #   id: temp-branch
-      #   run: echo "name=auto/gist-update-${{ github.run_id }}" >> "$GITHUB_OUTPUT"
-
       - name: Execute Python script (maintain_gists.py)
         env:
           GITHUB_TOKEN: ${{ secrets.GH_GIST_TOKEN }}
@@ -85,21 +81,9 @@ jobs:
           echo "==========     all-gists.json ==========================="
           cat all-gists.json
 
-      # - name: Check for changes
-      #   id: git-check
-      #   working-directory: ${{ github.workspace }}/gist-factory
-      #   run: |
-          # git branch --show-current
-
-          # if git diff --quiet --exit-code -- all-gists.json gist-id.json; then
-          #   echo "changes=false" >> $GITHUB_OUTPUT
-          # else
-          #   echo "changes=true" >> $GITHUB_OUTPUT
-          # fi
-
       # 🔒 Wait here if CodeQL is still running on this branch
       - name: Wait for CodeQL to be idle on this branch
-        if: steps.git-check.outputs.changes == 'true' && !inputs.dry_run && success()
+        if: success()
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPO: ${{ github.repository }}
