fix: update working directory path in manage-gists.yaml and add operation status to gists in maintain_gists.py

--- a/.github/workflows/manage-gists.yaml
+++ b/.github/workflows/manage-gists.yaml
@@ -121,7 +121,7 @@ jobs:
 
       - name: Commit only (no push yet)
         if: ${{ inputs.dry_run == false && success() }}
-        working-directory: gist-factory
+        working-directory: ${{ github.workspace }}/gist-factory
         run: |
           git branch
           git status
