--- a/.github/workflows/manage-gists.yaml
+++ b/.github/workflows/manage-gists.yaml
@@ -47,16 +47,16 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
 
-      - name: Set up Python 3.11
+      - name: Set up Python 3.x
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: '3.x'
           cache: 'pip'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests
+          pip install -r requirements.txt
 
       - name: Execute Python script (maintain_gists.py)
         env:
@@ -86,65 +86,82 @@ jobs:
           git add all-gists.json gist-operation-report.json
           git commit -m "Update gist metadata and operation report via GitHub Actions [skip ci]"
 
-
-      # 🔒 Wait here if CodeQL is still running on this branch
-      - name: Wait for CodeQL to be idle on this branch
-        if: success()
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          REPO: ${{ github.repository }}
-          BRANCH: ${{ github.ref_name }}
-          # set your CodeQL workflow name OR file; name is safest if you used the default
-          CODEQL_WORKFLOW_NAME: "Code Scanning - CodeQL"
+      - name: Configure Git
         run: |
-          echo "Waiting for CodeQL runs on ${{ env.BRANCH }} to finish..."
-          max_wait=1800   # 30 minutes
-          interval=15
-          waited=0
-          # query runs of the named workflow on this branch that are queued or in_progress
-          while true; do
-            inprog=$(gh run list \
-              --repo "$REPO" \
-              --workflow "$CODEQL_WORKFLOW_NAME" \
-              --branch "$BRANCH" \
-              --json status,headBranch \
-              --jq '[.[] | select(.headBranch=="'"$BRANCH"'") | select(.status=="in_progress" or .status=="queued")] | length')
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-            if [ "$inprog" -eq 0 ]; then
-              echo "CodeQL is idle on $BRANCH. Continuing."
-              break
-            fi
-
-            if [ "$waited" -ge "$max_wait" ]; then
-              echo "Timed out waiting for CodeQL ($waited s)."
-              exit 1
-            fi
-
-            echo "CodeQL still running ($inprog run(s)); sleeping $interval s..."
-            sleep $interval
-            waited=$((waited+interval))
-          done
-
-      - name: Commit changes
-        if: ${{ inputs.dry_run == false && success() }}
-        working-directory: ${{ github.workspace }}/gist-factory
+      - name: Commit and push changes to temp branch
         run: |
-          # git branch
-          # git status
-          # git config --local user.email "action@github.com"
-          # git config --local user.name "GitHub Action"
-          # git add all-gists.json gist-operation-report.json
+          BRANCH_NAME="temp-${{ github.run_id }}"
+          git checkout -b "$BRANCH_NAME"
+
+          git add yourfile.json   # replace with your JSON file
           if ! git diff --cached --quiet; then
-            git commit -m "Update gist metadata and operation report via GitHub Actions [skip ci]"
+            git commit -m "Update gist JSON files (run ${{ github.run_id }})"
+            git push origin "$BRANCH_NAME"
           else
-            echo "No changes to commit."; exit 0
+            echo "No changes to commit"
           fi
 
-      - name: Push changes after CodeQL is idle
-        if: ${{ inputs.dry_run == false && success() }}
-        working-directory: ${{ github.workspace }}/gist-factory
-        run: |
-          git push origin HEAD:"${{ github.ref_name }}" || echo "No changes to push, but branch exists."
+      # 🔒 Wait here if CodeQL is still running on this branch
+      # - name: Wait for CodeQL to be idle on this branch
+      #   if: success()
+      #   env:
+      #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     REPO: ${{ github.repository }}
+      #     BRANCH: ${{ github.ref_name }}
+      #     # set your CodeQL workflow name OR file; name is safest if you used the default
+      #     CODEQL_WORKFLOW_NAME: "Code Scanning - CodeQL"
+      #   run: |
+      #     echo "Waiting for CodeQL runs on ${{ env.BRANCH }} to finish..."
+      #     max_wait=1800   # 30 minutes
+      #     interval=15
+      #     waited=0
+      #     # query runs of the named workflow on this branch that are queued or in_progress
+      #     while true; do
+      #       inprog=$(gh run list \
+      #         --repo "$REPO" \
+      #         --workflow "$CODEQL_WORKFLOW_NAME" \
+      #         --branch "$BRANCH" \
+      #         --json status,headBranch \
+      #         --jq '[.[] | select(.headBranch=="'"$BRANCH"'") | select(.status=="in_progress" or .status=="queued")] | length')
+
+      #       if [ "$inprog" -eq 0 ]; then
+      #         echo "CodeQL is idle on $BRANCH. Continuing."
+      #         break
+      #       fi
+
+      #       if [ "$waited" -ge "$max_wait" ]; then
+      #         echo "Timed out waiting for CodeQL ($waited s)."
+      #         exit 1
+      #       fi
+
+      #       echo "CodeQL still running ($inprog run(s)); sleeping $interval s..."
+      #       sleep $interval
+      #       waited=$((waited+interval))
+      #     done
+
+      # - name: Commit changes
+      #   if: ${{ inputs.dry_run == false && success() }}
+      #   working-directory: ${{ github.workspace }}/gist-factory
+      #   run: |
+      #     # git branch
+      #     # git status
+      #     # git config --local user.email "action@github.com"
+      #     # git config --local user.name "GitHub Action"
+      #     # git add all-gists.json gist-operation-report.json
+      #     if ! git diff --cached --quiet; then
+      #       git commit -m "Update gist metadata and operation report via GitHub Actions [skip ci]"
+      #     else
+      #       echo "No changes to commit."; exit 0
+      #     fi
+
+      # - name: Push changes after CodeQL is idle
+      #   if: ${{ inputs.dry_run == false && success() }}
+      #   working-directory: ${{ github.workspace }}/gist-factory
+      #   run: |
+      #     git push origin HEAD:"${{ github.ref_name }}" || echo "No changes to push, but branch exists."
 
       # - name: Create & push temp branch (allowed by ruleset)
       #   if: steps.git-check.outputs.changes == 'true' && !inputs.dry_run && success()
@@ -161,12 +178,12 @@ jobs:
       #     base: "${{ github.ref_name }}"                       # current bug/... branch
       #     delete-branch: true
 
-      - name: Upload artifacts
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: gist-results
-          path: |
-            gist-factory/all-gists.json
-            gist-factory/gist-id.json
-          retention-days: 30
+      # - name: Upload artifacts
+      #   if: always()
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: gist-results
+      #     path: |
+      #       gist-factory/all-gists.json
+      #       gist-factory/gist-id.json
+      #     retention-days: 30
