fix: update filename and description for 1201-kubernetes-tf-100.json in all-gists.json and adjust working directory in manage-gists.yaml

--- a/.github/workflows/manage-gists.yaml
+++ b/.github/workflows/manage-gists.yaml
@@ -92,11 +92,12 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
       - name: Commit and push changes to temp branch
+        working-directory: ${{ github.workspace }}/gist-factory
         run: |
           BRANCH_NAME="temp-${{ github.run_id }}"
           git checkout -b "$BRANCH_NAME"
 
-          git add yourfile.json   # replace with your JSON file
+          git add -A .
           if ! git diff --cached --quiet; then
             git commit -m "Update gist JSON files (run ${{ github.run_id }})"
             git push origin "$BRANCH_NAME"
